# sea-orm-migration-extensions

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/attributes/: create_table_attr.rs  mod.rs
core/src/attributes/data_type/: integer.rs  mod.rs
core/src/codegen/: column_def_stmts.rs  column_definition.rs  common.rs  create_table_stmts.rs  data_type_stmts.rs  migration_statement_impl.rs  mod.rs
core/src/derive/: derive_create_table.rs  mod.rs
core/src/emitters/: derive.rs  mod.rs
core/src/implementation/: column_def_stmts.rs  create_table_stmts.rs  mod.rs
core/src/resource/: tokens.rs
core/src/resource/error/: err_invalid_col_application.in  mod.rs
core/src/traits/: migration_statement_trait.rs  migration_statements_trait.rs  mod.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro_core/: Cargo.toml
macro_core/src/: lib.rs
macro_core/src/attributes/: col_attr.rs  data_type.rs  mod.rs  table_statement_type.rs
macro_core/src/attributes/data_type/: string.rs
macro_core/src/codegen/: column_def_expression_impl.rs  data_type_expressions.rs  data_type_impl.rs  migration_statement_impl.rs  mod.rs  table_migration_statement_impl.rs  util.rs
macro_core/src/emitters/: common.rs  derive.rs  mod.rs
macro_core/src/implementation/: migration_statement.rs  mod.rs  table_migration_statement.rs
macro_core/src/metadata/: column_def_expression.rs  mod.rs  table_migration_statement.rs
macro_core/src/resource/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
tests/: create_table.rs
(+4 files in other folders)
