[package]
name = "sea_orm_migration_ex_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.57" }
darling = { version = "0.14.1" }
proc-macro2 = { version = "1.0.42" }
quote = { version = "1.0.21" }
sea-orm-migration = { version = "0.9.1" }
syn = { version = "1.0.99", features = ["full"] }
